// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ScrollWrapper /> > ContainVertical story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="h-[200px] w-[200px] bg-utility-default-noEmphasis-hover"
  >
    <div
      class="_scroll-wrapper_583563 _scroll-wrapper--orientation-vertical_583563 _scroll-wrapper--shadow-type-contain_583563"
    >
      <div
        class="_scroll-wrapper__inner_583563"
        tabindex="0"
      >
        <div
          class="h-[300px] w-[300px]"
          data-testid="scrollContent"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ScrollWrapper /> > Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="h-[200px] w-[200px] bg-utility-default-noEmphasis-hover"
  >
    <div
      class="_scroll-wrapper_583563 _scroll-wrapper--orientation-vertical_583563 _scroll-wrapper--shadow-type-cover_583563"
    >
      <div
        class="_scroll-wrapper__inner_583563"
        tabindex="0"
      >
        <div
          class="h-[300px] w-[300px] p-spacing-size-3"
          data-testid="scrollContent"
        />
      </div>
    </div>
  </div>
</div>
`;
